--- a/frontend/unity-spa/features/scholarship/assignments/assignments.html
+++ b/frontend/unity-spa/features/scholarship/assignments/assignments.html
@@ -158,6 +158,7 @@
                 <th class="px-3 py-2 text-left">Name</th>
                 <th class="px-3 py-2 text-left">Type</th>
                 <th class="px-3 py-2 text-left">From</th>
+                <th class="px-3 py-2 text-left">referree</th>
                 <th class="px-3 py-2 text-left">Assignment</th>
                 <th class="px-3 py-2 text-left">Actions</th>
               </tr>
@@ -187,6 +188,9 @@
                   {{ it.deduction_from || '-' }}
                 </td>
                 <td class="px-3 py-2 align-top">
+                  {{ it.referrer || '-' }}
+                </td>
+                <td class="px-3 py-2 align-top">
                   <span class="inline-flex px-2 py-1 rounded text-xs"
                         ng-class="{
                           'bg-yellow-100 text-yellow-800': vm.isPending(it),
@@ -206,7 +210,7 @@
                 </td>
               </tr>
               <tr ng-if="!vm.items.length">
-                <td colspan="6" class="px-3 py-6 text-center text-gray-500">No assignments found.</td>
+                <td colspan="7" class="px-3 py-6 text-center text-gray-500">No assignments found.</td>
               </tr>
             </tbody>
           </table>
